--- a/index.html
+++ b/index.html
@@ -244,5 +244,9 @@
   </div>
 
   <script src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="script.js"></script>
+
+  
 </body>
 </html>
