Add market chart canvas to portfolio list

--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@
             <div class="portfolio-list" style="margin-top:6px;">
               <div class="table-head">Your Holdings</div>
               <div id="portfolioList"></div>
+              <div style="margin-top:18px;padding:12px;background:#0d1324;border-radius:14px;">
+  <canvas id="marketChart" height="230"></canvas>
+</div>
+
             </div>
           </div>
 
